--- a/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
+++ b/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
@@ -18,13 +18,19 @@
 .fourteenth_form,
 .fifteenth_form,
 .sixteenth_form {
-  margin: 100px 0 300px 0;
+  margin: 50px 0 150px 0;
   border: 1px solid #bebebe;
+  @include phoneScreen {
+    margin: 50px 0 80px 0;
+  }
   .border_top_title {
     border-top: 1px solid #bebebe;
   }
   p {
     line-height: 145%;
+    @include phoneScreen {
+      text-align: left;
+    }
   }
   .border_bottom {
     border-bottom: 1px solid #bebebe;
@@ -40,6 +46,10 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    @include phoneScreen {
+      border-left: none;
+      padding: 0;
+    }
   }
   .right_flex {
     display: flex;
@@ -47,6 +57,9 @@
     gap: 20px;
     .input {
       width: 350px;
+      @include phoneScreen {
+        width: 100%;
+      }
     }
   }
   &_textarea {
@@ -61,6 +74,10 @@
       text-align: center;
       color: color(green);
       line-height: 145%;
+      @include phoneScreen {
+        font-size: 16px;
+        text-align: left;
+      }
     }
   }
   &_top_first {
@@ -74,15 +91,29 @@
       align-items: center;
       justify-content: center;
       gap: 20px;
+      @include phoneScreen {
+        flex-direction: column;
+        gap:0;
+        font-size: 16px;
+        padding: 10px;
+        text-align: left;
+      }
     }
     .input {
       width: 200px;
+      @include phoneScreen {
+        width: 100%;
+      }
     }
     p {
       text-align: center;
       font-size: 14px;
       color: color(dark);
       margin: 12px auto;
+      @include phoneScreen {
+        text-align: left;
+        padding: 10px;
+      }
     }
   }
   .top_content_last_block {
@@ -92,6 +123,11 @@
     .input {
       width: 400px;
       margin: 10px auto 0;
+      @include phoneScreen {
+        width: 100%;
+        margin: 0;
+        padding: 10px 0 0 0;
+      }
     }
   }
   &_inputs {
@@ -100,12 +136,22 @@
     gap: 25px;
     padding: 20px 15px;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 12px;
+      padding: 15px 10px;
+    }
   }
   &_left_block {
     width: 30%;
     display: flex;
     flex-direction: column;
     gap: 14px;
+    @include phoneScreen {
+      width: 100%;
+    }
     h3 {
       font-size: 20px;
       font-weight: 400;
@@ -114,6 +160,9 @@
   }
   &_right_block {
     width: 80%;
+    @include phoneScreen {
+      width: 100%;
+    }
     textarea {
       color: color(dark);
       box-sizing: border-box;
@@ -134,11 +183,18 @@
     display: flex;
     align-items: center;
     background: color(green);
+    @include phoneScreen {
+      flex-direction: column;
+      align-items: flex-start;
+    }
     p {
       color: color(white);
       font-size: 18px;
       padding: 12px 10px;
       text-align: center;
+      @include phoneScreen {
+        text-align: left;
+      }
     }
   }
   &_textarea {
@@ -167,6 +223,13 @@
 
 }
 
+//phoneScreen
+.phone_screen_column {
+  flex-direction: column !important;
+  padding: 0 !important;
+  margin-top: 12px !important;
+}
+
 //вторая форма
 .second_form {
   &_radios {
@@ -176,6 +239,13 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 8px;
+      padding: 10px;
+    }
   }
   &_middle_title {
     padding: 10px;
@@ -187,6 +257,11 @@
       text-align: center;
       color: #009247;
       line-height: 145%;
+      @include phoneScreen {
+        font-size: 18px;
+        max-width: 100%;
+        text-align: left;
+      }
     }
   }
   &_middle_title_block {
@@ -194,25 +269,44 @@
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
     .second_form_left_title {
       padding: 12px 0;
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
       h3 {
         text-align: center;
         font-size: 18px;
         color: grey;
         font-weight: 400;
+        @include phoneScreen {
+          text-align: left;
+          padding: 0 0 0 10px;
+        }
       }
       h2 {
         text-align: center;
         font-size: 18px;
         color: color(dark);
         font-weight: 400;
+        @include phoneScreen {
+          text-align: left;
+          padding: 0 0 0 10px;
+        }
       }
     }
     .second_form_right_title {
       padding: 12px 0 !important;
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
       h3 {
         font-size: 18px;
         color: grey;
@@ -223,11 +317,25 @@
         font-size: 18px;
         color: color(dark);
         font-weight: 400;
+        line-height: 145%;
+        @include phoneScreen {
+          text-align: left;
+          padding: 0 0 0 10px;
+        }
       }
     }
     .input__item {
       width: 200px;
       padding: 0 0 0 50px;
+      @include phoneScreen {
+        text-align: left;
+        width: 100%;
+        padding: 0 10px;
+        box-sizing: border-box;
+        input {
+          box-sizing: border-box;
+        }
+      }
     }
   }
   &_middle_radio_block {
@@ -235,17 +343,32 @@
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 10px;
+    }
     .second_form_left_title_block {
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
       h3 {
         text-align: center;
         font-size: 18px;
         color: grey;
         font-weight: 400;
+        line-height: 145%;
+        @include phoneScreen {
+          text-align: left;
+        }
       }
     }
     .second_form_right_radio {
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
     }
     .right_border {
       padding: 12px 0 !important;
@@ -255,6 +378,11 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
+      @include phoneScreen {
+        flex-direction: revert;
+        align-items: flex-start;
+        padding-left: 10px;
+      }
     }
   }
 }
@@ -264,6 +392,9 @@
   .third_form_right_block_middle_input {
     margin-top: 20px;
     width: 50%;
+    @include phoneScreen {
+      width: 100%;
+    }
   }
   &_radios {
     padding: 15px 0;
@@ -272,6 +403,12 @@
     justify-content: center;
     align-items: center;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      gap: 2px;
+      align-items: flex-start;
+      padding: 10px 5px;
+    }
   }
   &_inputs_row {
     display: flex;
@@ -284,6 +421,9 @@
     justify-content: space-between;
     gap: 20px;
     width: 100%;
+    @include phoneScreen {
+      flex-direction: column;
+    }
     p {
       font-size: 20px;
       color: color(dark);
@@ -293,6 +433,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    @include phoneScreen {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 5px;
+    }
   }
   .left_inputs {
     width: 100%;
@@ -302,6 +447,11 @@
     align-items: flex-end;
     gap: 40px;
     margin: 0 0 12px 0;
+    @include phoneScreen {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 25px;
+    }
   }
   .checkbox_wrapp {
     label {
@@ -313,6 +463,9 @@
   }
   .checkbox_wrapp_no_gap {
     gap: 10px;
+    @include phoneScreen {
+      gap: 25px;
+    }
     p {
       color: #525252;
       font-size: 14px;
@@ -328,25 +481,43 @@
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      align-items: flex-start;
+      flex-direction: column;
+      justify-content: center;
+      padding: 10px;
+    }
     .second_form_left_title {
       padding: 12px 0;
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
       h3 {
         text-align: center;
         font-size: 18px;
         color: grey;
         font-weight: 400;
+        @include phoneScreen {
+          text-align: left;
+        }
       }
       h2 {
         text-align: center;
         font-size: 18px;
         color: color(dark);
         font-weight: 400;
+        @include phoneScreen {
+          text-align: left;
+        }
       }
     }
     .second_form_right_title {
       padding: 12px 0 !important;
       width: 50%;
+      @include phoneScreen {
+        width: 100%;
+      }
       h3 {
         font-size: 18px;
         color: grey;
@@ -357,6 +528,9 @@
         font-size: 18px;
         color: color(dark);
         font-weight: 400;
+        @include phoneScreen {
+          padding: 0;
+        }
       }
     }
     .input__item {
@@ -368,6 +542,9 @@
     display: flex;
     align-items: flex-start;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+    }
   }
   &_left_img_block {
     width: 180px;
@@ -376,6 +553,11 @@
     width: 50%;
     border-right: 1px solid #bebebe;
     padding: 20px;
+    @include phoneScreen {
+      width: 100%;
+      padding: 10px;
+      box-sizing: border-box;
+    }
   }
   &_right_block_image_input {
     width: 50%;
@@ -394,21 +576,34 @@
     display: flex;
     align-items: center;
     gap: 40px;
+    @include phoneScreen {
+      flex-direction: column;
+      gap: 15px;
+    }
   }
   .input_middle_first_block {
     display: flex;
     flex-direction: column;
     gap: 12px;
     width: 50%;
+    @include phoneScreen {
+      width: 100%;
+    }
   }
   .input_middle_second_block {
     display: flex;
     flex-direction: column;
     gap: 12px;
     width: 50%;
+    @include phoneScreen {
+      width: 100%;
+    }
   }
   .input_м3 {
     width: 100px;
+    @include phoneScreen {
+      width: 100%;
+    }
   }
   .radios_middle {
     display: flex;
@@ -421,10 +616,16 @@
     }
     &_bottom_checkbox {
       margin: 30px 0 0 0;
+      @include phoneScreen {
+        margin-top: 5px;
+      }
     }
   }
   .radios_middle_last {
     margin-top: 30px;
+    @include phoneScreen {
+      margin-top: 0;
+    }
   }
   &_columns {
     display: flex;
@@ -433,16 +634,30 @@
     padding: 15px 0;
     gap: 25px;
     border-bottom: 1px solid #bebebe;
+    @include phoneScreen {
+      flex-direction: column;
+      padding: 10px;
+      gap: 10px;
+    }
     &_item {
       width: 22%;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      @include phoneScreen {
+        width: 100%;
+      }
       &_title {
         margin-bottom: 20px;
+        @include phoneScreen {
+          margin: 0;
+        }
         p {
           padding: 5px 0 17px 0;
           font-size: 20px;
+          @include phoneScreen {
+            padding: 5px 0;
+          }
         }
       }
       &_inputs {
@@ -450,6 +665,10 @@
         display: flex;
         flex-direction: column;
         gap: 18px;
+        @include phoneScreen {
+          width: 100%;
+          margin: 12px 0 0 0;
+        }
         .input_м2 {
           width: 100%;
         }
@@ -459,10 +678,19 @@
       display: flex;
       align-items: flex-start;
       gap: 50px;
+      @include phoneScreen {
+        flex-direction: column;
+        width: 100%;
+        gap: 20px;
+      }
       &_left {
         display: flex;
         flex-direction: column;
         gap: 18px;
+        @include phoneScreen {
+          width: 100%;
+          gap: 10px;
+        }
         p {
           padding: 10px 0 0 0;
         }
@@ -477,6 +705,9 @@
         display: flex;
         flex-wrap: wrap;
         gap: 25px;
+        @include phoneScreen {
+          gap: 12px;
+        }
       }
     }
     &_block_last {
@@ -497,10 +728,16 @@
     flex-direction: column;
     gap: 25px;
     padding: 20px 15px;
+    @include phoneScreen {
+      gap: 10px;
+    }
     p {
       font-size: 18px;
       color: color(dark);
       margin-bottom: 20px;
+      @include phoneScreen {
+        margin: 0;
+      }
     }
   }
   .border_top_title {
@@ -522,6 +759,9 @@
   }
   &_input_short {
     width: 200px;
+    @include pcScreen {
+      width: 100%;
+    }
   }
 }
 
