--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -81,6 +81,7 @@
         color: color(white);
         text-align: center;
         font-weight: 300;
+        padding: 0 0 5% 0;
         @media (max-width: 600px) {
           font-size: 20px;
           max-width: 210px;
