--- a/styles/include/_slider.scss
+++ b/styles/include/_slider.scss
@@ -7,17 +7,19 @@
   .swiper-pagination {
     margin: 15px auto 0;
     width: fit-content !important;
+    display: flex;
+
     .swiper-pagination-bullet {
       width: 15px;
       height: 15px;
       text-align: center;
-      display: inline-block;
       border-radius: 50%;
       line-height: 20px;
       font-size: 12px;
       opacity: 0;
       background: #2E6143;
       cursor: pointer;
+      display: none;
 
     }
 
@@ -25,6 +27,7 @@
       color: #fff;
       opacity: 1;
       margin: 0 2px;
+      display: block;
     }
 
     .swiper-pagination-bullet-active-next,
@@ -32,6 +35,7 @@
       transform: scale(0.66);
       opacity: 0.2;
       margin-right: 2px;
+      display: block;
     }
 
     .swiper-pagination-bullet-active-next-next,
@@ -39,6 +43,7 @@
       transform: scale(0.33);
       opacity: 0.2;
       margin-left: -5px;
+      display: block;
     }
   }
 
