--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -1,7 +1,6 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-
 .equipment__container {
   display: grid;
   grid-template-columns: 250px 1fr;
@@ -24,6 +23,7 @@
 
     ul {
       background: #8B9C88;
+
       li {
         display: flex;
         justify-content: space-between;
@@ -33,6 +33,7 @@
         border-bottom: 0.5px solid #b4bdb27d;
         transition: all 0.3s;
         color: white;
+
         span {
           width: 80%;
         }
@@ -44,6 +45,7 @@
         &:hover {
           background-color: #748371;
           cursor: pointer;
+
           svg {
             margin-right: -10px;
           }
@@ -60,6 +62,7 @@
       display: flex;
       align-items: center;
       line-height: 57px;
+
       svg {
         margin-right: 8px;
       }
@@ -73,7 +76,8 @@
       text-transform: uppercase;
       position: relative;
     }
-    &_banner{
+
+    &_banner {
       border-radius: 20px;
       overflow: hidden;
       margin: 0 0 30px 0;
@@ -85,6 +89,7 @@
 
       &:hover {
         box-shadow: 0 14px 30px rgba(39, 43, 39, 0.1);
+
         img {
           transform: scale(1.1);
         }
@@ -95,6 +100,7 @@
         object-fit: cover;
       }
     }
+
     &_product {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
@@ -110,13 +116,16 @@
         transition: all 0.2s;
         position: relative;
         border: 1px solid color(border_category);
+
         &:hover img {
           object-fit: contain;
           transform: scale(1.1);
         }
-        &:last-child{
+
+        &:last-child:nth-child(2n+1) {
           grid-column: span 2;
         }
+
         &:hover {
           box-shadow: 0 14px 30px rgba(39, 43, 39, 0.1);
         }
@@ -130,7 +139,7 @@
     }
   }
 
-  &__button_back{
+  &__button_back {
     display: flex;
     align-items: center;
     background-color: #45563c;
@@ -140,6 +149,7 @@
     padding: 16px;
     transition: all 0.3s;
     cursor: pointer;
+
     svg {
       margin-right: 12px;
 
